[package]
name = "rust-f4"
version = "0.1.0"
authors = ["Crooszpai <61010556@kmitl.ac.th>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0"  
nb = "^0.1.2"
st7735-lcd = "0.8.0-alpha.1"
embedded-graphics = "0.7.0-alpha.1"
numtoa = "0.2.3"
arrayvec = { version = "0.5.2", default-features = false }

[dependencies.stm32f4xx-hal]
version = "^0.8.3"
features = ["rt", "stm32f411"]
